# cpp-http-server

./: CMakeLists.txt  LICENSE  README.md
include/http/: file_reader.hpp  parser.hpp  request.hpp  response.hpp
include/socket/: socket.hpp
public/: 404.html  about.html  index.html
src/: main.cpp
src/http/: file_reader.cpp  parser.cpp
src/socket/: socket.cpp
